testdata/baselines/reference/submodule/conformance/jsdocImportType2.errors.txt
mod1.js(4,14): error TS2339: Property 'chunk' does not exist on type 'Chunk'.


==== use.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    /** @typedef {import("./mod1")} C
     * @type {C} */
    var c;
    c.chunk;
    
    const D = require("./mod1");
    /** @type {D} */
    var d;
    d.chunk;
    
==== types.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
    declare var module: { exports: any };
==== mod1.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    module.exports = class Chunk {
        constructor() {
            this.chunk = 1;
                 ~~~~~
!!! error TS2339: Property 'chunk' does not exist on type 'Chunk'.
        }
    }
    